--- a/dada/templates/archive_options_screen.tmpl
+++ b/dada/templates/archive_options_screen.tmpl
@@ -164,14 +164,16 @@
 			</div>
 		</div>
 	</fieldset>
-	<ul class="button-group right">
-		 <li>
-			 <input type="reset"  class="warning button" value="Clear Changes">
-		 </li>
-		 <li>
-			 <input type="submit" class="success button" value="Change Archive Options">
-		 </li>
-	</ul>
+	<div class="clearfix">
+		<ul class="button-group right">
+			 <li>
+				 <input type="reset"  class="warning button" value="Clear Changes">
+			 </li>
+			 <li>
+				 <input type="submit" class="success button" value="Change Archive Options">
+			 </li>
+		</ul>
+	</div>
 </form> 
 
 <!-- end archive_options_screen.tmpl -->
