--- a/dada/templates/change_password_screen.tmpl
+++ b/dada/templates/change_password_screen.tmpl
@@ -66,21 +66,31 @@
 
         <!--/tmpl_unless-->
 
-        <div class="row">
-           <div class="small-12 columns">
-               <label for="new_password">
+	      <div class="row">
+	        <div class="large-3 medium-3 columns">
+               <label 
+			   		for="new_password"
+					class="medium-only-text-right large-only-text-right"
+				>
                    New List Password
-                   <input type="password" name="new_password" id="new_password"  maxlength="24" >
-                </label> 
+                </label>
+			</div>
+	        <div class="large-9 medium-9 columns">
+				   <input type="password" name="new_password" id="new_password"  maxlength="24" >
             </div> 
         </div>
 
-        <div class="row">
-           <div class="small-12 columns">
-               <label for="again_new_password">
+	      <div class="row">
+	        <div class="large-3 medium-3 columns">
+               <label 
+			   	for="again_new_password"
+				class="medium-only-text-right large-only-text-right"
+				>
                    Re-enter New List Password
+				</label> 
+			</div>
+	        <div class="large-9 medium-9 columns">
                    <input type="password" name="again_new_password" id="again_new_password" maxlength="24" >
-                </label> 
             </div> 
         </div>
 
