--- a/dada/templates/list_invite_screen.tmpl
+++ b/dada/templates/list_invite_screen.tmpl
@@ -39,7 +39,7 @@
 	<div id="entire_form">
 	  <div id="form_widgets">
 
-	  	<div id="buttons" class="contain-to-grid">
+	  	<div id="buttons">
 			<!-- tmpl_include send_email_button_widget.tmpl -->
 	  	</div>
 		  
