--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -44,6 +44,8 @@
 	<input type="hidden" name="process" value="1" >
 	<input type="hidden" name="flavor"  value="list_options" >
 	
+<h3>Options</h3> 
+	
 	
 <fieldset>
     <legend>
@@ -149,7 +151,7 @@
 
 
 
-<h1>Advanced Options</h1> 
+<h3>Advanced Options</h3> 
 
 <fieldset>
     <legend>
@@ -930,16 +932,16 @@
 	</div>
 
     </fieldset> 
-
-	<ul class="button-group right">    
-		 <li>
-			 <input type="reset"  class="warning button" value="Clear Changes">
-		 </li>
-		 <li>
-			 <input type="submit" class="success button" value="Save List Options">
-		</li>
- 	</ul>
- 
+	<div class="clearfix">
+		<ul class="button-group right">    
+			 <li>
+				 <input type="reset"  class="warning button" value="Clear Changes">
+			 </li>
+			 <li>
+				 <input type="submit" class="success button" value="Save List Options">
+			</li>
+	 	</ul>
+	</div>
 </form> 
 
 <!-- end list_options_screen.tmpl -->
