--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -46,8 +46,8 @@
 		<!-- /tmpl_if --> 
 	</nav>
 
-<div class="row">
-   <div class="small-12">
+<div class="row" >
+   <div class="small-12" style="background-color:#fff">
 	   
 		   <h1>
 			   <!-- tmpl_var title -->
