--- a/dada/templates/send_email_options_widget.tmpl
+++ b/dada/templates/send_email_options_widget.tmpl
@@ -1,8 +1,5 @@
 <!-- begin send_email_options_widget.tmpl -->
-<fieldset> 
-	<legend>
-		Options
-	</legend>
+<div class="panel">
 <div class="row">
   <div class="small-12 columns">
     <ul class="tabs show-for-medium-up" data-tab>
@@ -46,5 +43,5 @@
 
   </div>
 </div>
-</fieldset> 
+</div> 
 <!-- end send_email_options_widget.tmpl -->
