--- a/dada/templates/amazon_ses_requirements_widget.tmpl
+++ b/dada/templates/amazon_ses_requirements_widget.tmpl
@@ -2,9 +2,11 @@
 
 <!-- tmpl_if amazon_ses_has_needed_cpan_modules --> 
 	
-		<p class="positive" id="has_needed_cpan_modules"> 
-			<!-- All needed CPAN modules are installed! -->
-		</p>
+		<div class="alert-box info radius">
+			<p id="has_needed_cpan_modules"> 
+				<!-- All needed CPAN modules are installed! -->
+			</p>
+		</div>
 	
 <!-- tmpl_else --> 
 	
