--- a/dada/templates/admin_top_bar_menu.tmpl
+++ b/dada/templates/admin_top_bar_menu.tmpl
@@ -1,6 +1,6 @@
 <!-- begin admin_top_bar_menu.tmpl -->
 
-<nav class="top-bar" data-topbar role="navigation">
+<nav class="top-bar" data-topbar role="navigation" id="admin_top_bar_menu">
 	<section class="top-bar-section">
 		<ul class="left">
 			<!-- tmpl_loop name="NAV" -->
