--- a/dada/templates/adv_archive_options_screen.tmpl
+++ b/dada/templates/adv_archive_options_screen.tmpl
@@ -376,22 +376,9 @@
 		<!-- tmpl_if list_settings.add_social_bookmarking_badges -->checked="checked"<!--/tmpl_if--> 
 	   >
 		<label for="add_social_bookmarking_badges">
-			Add social bookmark buttons to your archived messages. <em>(Experimental)</em>
+			Add social bookmark buttons to your archived messages.
 		</label> 
-
-       <ul>
-        <li>        
-			  <img src="https://delicious.com/img/logo.png" height="16" width="16" alt="Delicious"> Save this on Delicious
-		</li>
-        <li>
-			<img src="//www.redditstatic.com/spreddit7.gif" alt="submit to reddit" border="0" />
-		</li>
-		<li>
-			<script src="https://apis.google.com/js/platform.js" async defer></script>
-			<g:plus action="share"></g:plus>
-		</li>
-		</ul>
-	</div>
+ 	</div>
 </div> 
 
 </fieldset>
@@ -453,11 +440,12 @@ Gravatars
 
 
 
-
-<ul class="button-group right">
- <li><input type="reset"  class="button warning" value="Clear Changes"></li>
- <li><input type="submit" class="button success" value="Change Archive Options"></li>
-</ul>
+<div class="clearfix">
+	<ul class="button-group right">
+	 <li><input type="reset"  class="button warning" value="Clear Changes"></li>
+	 <li><input type="submit" class="button success" value="Change Archive Options"></li>
+	</ul>
+</div>
 </form> 
 
  
