--- a/dada/templates/html_code_screen.tmpl
+++ b/dada/templates/html_code_screen.tmpl
@@ -57,10 +57,10 @@
 		<textarea cols="50" rows="12"><!-- tmpl_var jquery_body_code escape="HTML" --></textarea>
 
 		<div class="row">
-  		  <div class="small-3 small-centered columns">
+  		  <div class="small-6 small-centered columns">
 				 <a 
 				 	href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=preview_jquery_plugin_subscription_form"
-					class="button success preview_jquery_plugin_subscription_form"
+					class="button success preview_jquery_plugin_subscription_form expand"
 					target="_blank"
 				>
 					 	View Working Preview...
