--- a/dada/templates/send_email_button_widget.tmpl
+++ b/dada/templates/send_email_button_widget.tmpl
@@ -6,7 +6,7 @@
  archive_no_send: <!-- tmpl_var archive_no_send -->
   <!-- /tmpl_if --> 
 
-		<ul class="button-group">  
+		<ul class="button-group center">  
 	
 	  <!-- tmpl_if expr="(mass_mailing_type eq 'invite')" -->
  
