--- a/dada/templates/sending_monitor_index_screen.tmpl
+++ b/dada/templates/sending_monitor_index_screen.tmpl
@@ -212,22 +212,14 @@
 <!--/tmpl_if--> 
 
 </fieldset> 
-
-
-<p style="font-weight:bold;">
 	
- <a href="#" class="toggleDivs" data-target="verbose_sending_information">
- +/- 
- </a>Verbose Sending Information...
-</p>
+<a href="#" class="toggleDivs button" data-target="verbose_sending_information">
+	+/- Verbose Sending Information...
+</a>
+
 
 <div id="verbose_sending_information" style="display:none">
-<pre> 
-
-    <!-- tmpl_var monitor_mailout_report --> 
-
-</pre> 
-
+<pre><!-- tmpl_var monitor_mailout_report --></pre> 
 </div> 
 
 
