--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -104,7 +104,7 @@
            
          
          <!-- mobile navigation stuff -->
-         <nav class="tab-bar show-for-small">
+         <nav class="tab-bar show-for-small" role="navigation">
            <section class="left-small">
              <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
            </section>
@@ -187,7 +187,7 @@
 
 <!-- /tmpl_if -->					 
 					 <div class="row">
-	                     <div class="large-12 medium-12 columns large-centered medium-centered" style="background-color:#fff" id="content_area">
+	                     <div class="large-12 medium-12 columns large-centered medium-centered" id="admin_content_area">
 	                        <!-- tmpl_var content -->
 	                     </div> 
 					</div>
