--- a/dada/templates/plugins/change_root_password/default.tmpl
+++ b/dada/templates/plugins/change_root_password/default.tmpl
@@ -65,12 +65,14 @@
 	</div>
 </div>
 
-<ul class="button-group right">
-    <li>
-		<input type="reset"  class="warning button">
-	</li>
-	<li>
-		<input type="submit" class="success button" value="Change <!-- tmpl_var PROGRAM_NAME --> Root Password">
-	</li>
-</ul>
+<div class="clearfix">
+	<ul class="button-group right">
+	    <li>
+			<input type="reset"  class="warning button">
+		</li>
+		<li>
+			<input type="submit" class="success button" value="Change <!-- tmpl_var PROGRAM_NAME --> Root Password">
+		</li>
+	</ul>
+</div>
 </form> 
